<resources>
    <string name="app_name">RoseLifeSimulator</string>
    <string name="date">09.01.2019</string>
    <string name="time">Morning</string>
    <string name="week">Week 1</string>

    <string name="day_format">Day %d</string>
    <string name="week_format">Week %d </string>

    <string name="health">Health : 100</string>
    <string name="happiness">Happiness : 100</string>
    <string name="actionPoint">Action Point : 3</string>

    <string name="health_format">Health : %d</string>
    <string name="happiness_format">Happiness : %d</string>
    <string name="actionPoint_format">Action Point : %d</string>
    <string name="gpa_format">Average GPA : %.2f</string>
    <string name="name_format">Name : %s</string>

    <string name="year">Year: 2019</string>
    <string name="major">Major: CS</string>


    <string name="major_format">Major: %s</string>
    <string name="playerName_format">Name: %s</string>

    <string name="hello_world">Hello World!</string>

    <string name="action_settings">Settings</string>
    <string name="save_game">Save Game</string>
    <string name="load_game">Load Game</string>
    <string name="settings">Settings</string>
    <string name="back">Back</string>
    <string name="roselife_simulator">RoseLife Simulator</string>
    <string name="account">Account</string>
    <string name="password">Password</string>
    <string name="go">GO!</string>
    <string name="dr_boutell">Dr.Boutell</string>
    <string name="bsb_hall">BSB Hall</string>
    <string name="unknown_person_name">A Girl of Your Type</string>


    <!-- save string -->
    <string name="save_time">12.17.2018 2:30</string>
    <string name="save_slot_info_1">save slot 1: empty</string>
    <string name="save_slot_info_2">save slot 2: empty</string>
    <string name="save_slot_info_3">save slot 3: empty</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="intro_text">This is a simulator game for life at Rose-Hulman. It consists of study, entertainment and
        social life. Everything is fake, except school photos and some names (e.g. professors\', clubs\', etc).
    </string>
    <string name="are_you_sure_to_logout">Are You Sure to Logout?</string>
    <string name="your_name">Your Name</string>
    <string name="bgm_volume">BGM Volume</string>

</resources>
