<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:id="@+id/SaveGame"
              android:textSize="30sp"
              android:layout_gravity="center"
              android:text="@string/save_game"
    />

    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:id="@+id/LoadGame"
              android:textSize="30sp"
              android:layout_gravity="center"
              android:text="@string/load_game"
    />

    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:id="@+id/Settings"
              android:layout_gravity="center"
              android:textSize="30sp"
              android:text="@string/settings"
    />

    <TextView android:layout_width="wrap_content"
              android:id="@+id/Exit"
              android:layout_gravity="center"
              android:layout_height="wrap_content"
              android:textSize="30sp"
              android:text="Exit Game"
    />

    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_gravity="end"
              android:textSize="30sp"
              android:id="@+id/Back"
              android:text="@string/back"
    />

</LinearLayout>